fix spacing issue

--- a/src/app/story-so-far/story-so-far.component.css
+++ b/src/app/story-so-far/story-so-far.component.css
@@ -22,6 +22,7 @@
 }
 
 .pages { 
+	padding-top: 20px;
 	padding-bottom: 15px;
 	margin-bottom: 0px; 
 }
